fixed success modal on mobile

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -14,6 +14,19 @@ h3{
   color: #262229;
 }
 
+h2{
+  // font-size: medium;
+  // font-weight: 900;
+  color: #262229;
+}
+
+h1{
+  padding-top: 20px;
+  // font-size: medium;
+  font-weight: 900;
+  color: #262229;
+}
+
 header{
   display: flex;
   justify-content: space-between;
@@ -395,6 +408,19 @@ header{
 }
 
 .text-3xl{
+  text-align: center;
+}
+
+.modal-content {
+  position: relative;
+  background-color: white;
+  border-radius: 10px;
+  min-width: 90%;
+  min-height: 300px;
+  margin: 100px auto;
+  padding: 20px 10px 20px ;
+  width: fit-content;
+  height: fit-content;
   text-align: center;
 }
 
